tests/paczka1/fuzzy1/59840591.err
Error in line 24: YfeMLZC A469 64,5
Error in line 5: dA8yK4FV S767 72,6
Error in line 36: PTeVD4kM4 A282 2s,2
Error in line 39: 6ddukZ S767 5,7
